Minor spacing fix

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -5,7 +5,7 @@
 
 .pagination {
   color: #ccc;
-  margin: 0 -1.5rem 1rem;
+  margin: 1.5rem -1.5rem;
   overflow: hidden; // clearfix
   text-align: center;
 }
